--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   SDK_VERSION: '6.0.401'
+  TEST_VERSION: '${GITHUB_REF#refs/heads/}-${{ github.run_number }}'
 
 
 jobs:
@@ -37,5 +38,24 @@ jobs:
     - name: "Build"
       run: dotnet build --configuration Release --no-restore
 
-    - name: "Test"
-      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }}
+    - name: "Test for main version"
+      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
+
+    - name: "Test for PR"
+      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ env.TEST_VERSION }}
+
+    - name: "Comment PR"
+      uses: actions/github-script@0.3.0
+      if: github.event_name == 'pull_request'
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const message = `🚀 **Stryker report generated** 🚀
+            [![Mutation testing badge](https://img.shields.io/endpoint?style=flat&url=https%3A%2F%2Fbadge-api.stryker-mutator.io%2Fgithub.com%2FNelsonBN%2Fdemo-dotnet-mutation-tests%2F${{ env.TEST_VERSION }})](https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ env.TEST_VERSION }})
+            to more details: https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ env.TEST_VERSION }})`;
+            github.issues.createComment({ 
+              issue_number, 
+              owner, 
+              repo, 
+              body: message
+            });
