--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -1,10 +1,11 @@
-name: 'Tests'
+name: 'Mutation tests'
 
 
 on:
   workflow_dispatch: # To can dispatch manually
 
-  push:
+  pull_request:
+    types: [opened, reopened, edited, synchronize]
     branches:
       - main
 
@@ -21,6 +22,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: "Test version"
+      run: echo "Test version ${{ env.TEST_VERSION }}"
+
     - name: "Checkout"
       uses: actions/checkout@v3
 
@@ -29,7 +33,7 @@ jobs:
       with:
         dotnet-version: ${{ env.SDK_VERSION }}
 
-    - name: "Restore .Net Tools"
+    - name: "Restore .NET Tools"
       run: dotnet tool restore
 
     - name: "Restore dependencies"
@@ -42,6 +46,7 @@ jobs:
       run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
 
     - name: "Test for PR"
+      if: github.event_name == 'pull_request'
       run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ env.TEST_VERSION }}
 
     - name: "Comment PR"
@@ -53,9 +58,9 @@ jobs:
           const message = `🚀 **Stryker report generated** 🚀
             [![Mutation testing badge](https://img.shields.io/endpoint?style=flat&url=https%3A%2F%2Fbadge-api.stryker-mutator.io%2Fgithub.com%2FNelsonBN%2Fdemo-dotnet-mutation-tests%2F${{ env.TEST_VERSION }})](https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ env.TEST_VERSION }})
             to more details: https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ env.TEST_VERSION }})`;
-            github.issues.createComment({ 
-              issue_number, 
-              owner, 
-              repo, 
+            github.issues.createComment({
+              issue_number,
+              owner,
+              repo,
               body: message
             });
