--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -12,7 +12,6 @@ on:
 
 env:
   SDK_VERSION: '6.0.401'
-  TEST_VERSION: '${GITHUB_REF#refs/heads/}-${{ github.run_number }}'
 
 
 jobs:
@@ -45,9 +44,13 @@ jobs:
     - name: "Test for main version"
       run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
 
+    - name: Get branch name
+      id: branch-name
+      uses: tj-actions/branch-names@v6
+
     - name: "Test for PR"
       if: github.event_name == 'pull_request'
-      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ env.TEST_VERSION }}
+      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
 
     - name: "Comment PR"
       uses: actions/github-script@0.3.0
@@ -56,8 +59,8 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const message = `🚀 **Stryker report generated** 🚀
-            [![Mutation testing badge](https://img.shields.io/endpoint?style=flat&url=https%3A%2F%2Fbadge-api.stryker-mutator.io%2Fgithub.com%2FNelsonBN%2Fdemo-dotnet-mutation-tests%2F${{ env.TEST_VERSION }})](https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ env.TEST_VERSION }})
-            to more details: https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ env.TEST_VERSION }})`;
+            [![Mutation testing badge](https://img.shields.io/endpoint?style=flat&url=https%3A%2F%2Fbadge-api.stryker-mutator.io%2Fgithub.com%2FNelsonBN%2Fdemo-dotnet-mutation-tests%2F${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})](https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})
+            to more details: https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})`;
             github.issues.createComment({
               issue_number,
               owner,
