--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -13,6 +13,10 @@ on:
 env:
   SDK_VERSION: '6.0.401'
 
+  GIT_ORGANIZATION: 'NelsonBN'
+  PROJECT_NAME: 'demo-dotnet-mutation-tests'
+  TEST_PROJECT_PATH: 'tests/Demo.Tests.csproj'
+
 
 jobs:
 
@@ -42,7 +46,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: "Test for main version"
-      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
 
     - name: "Get branch name"
       id: branch-name
@@ -50,7 +54,7 @@ jobs:
 
     - name: "Test for PR"
       if: github.event_name == 'pull_request'
-      run: dotnet stryker -tp tests/Demo.Tests.csproj --reporter cleartext --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
 
     - name: "Comment PR"
       uses: actions/github-script@0.3.0
@@ -60,8 +64,8 @@ jobs:
         script: |
           const { issue: { number: issue_number }, repo: { owner, repo } } = context;
           const message = `🚀 **Stryker report generated** 🚀
-            [![Mutation testing badge](https://img.shields.io/endpoint?style=flat&url=https%3A%2F%2Fbadge-api.stryker-mutator.io%2Fgithub.com%2FNelsonBN%2Fdemo-dotnet-mutation-tests%2F${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})](https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})
-            to more details: https://dashboard.stryker-mutator.io/reports/github.com/NelsonBN/demo-dotnet-mutation-tests/${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})`;
+            [![Mutation testing badge](https://img.shields.io/endpoint?style=flat&url=https%3A%2F%2Fbadge-api.stryker-mutator.io%2Fgithub.com%2F${{ env.GIT_ORGANIZATION }}%2F${{ env.PROJECT_NAME }}%2F${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})](https://dashboard.stryker-mutator.io/reports/github.com/${{ env.GIT_ORGANIZATION }}/${{ env.PROJECT_NAME }}/${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }})
+            To more details: https://dashboard.stryker-mutator.io/reports/github.com/${{ env.GIT_ORGANIZATION }}/${{ env.PROJECT_NAME }}/${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}`;
             github.issues.createComment({
               issue_number,
               owner,
