--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -25,9 +25,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: "Test version"
-      run: echo "Test version ${{ env.TEST_VERSION }}"
-
     - name: "Checkout"
       uses: actions/checkout@v3
 
@@ -46,7 +43,7 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: "Test for main version"
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
 
     - name: "Get branch name"
       id: branch-name
@@ -54,7 +51,7 @@ jobs:
 
     - name: "Test for PR"
       if: github.event_name == 'pull_request'
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
 
     - name: "Comment PR"
       uses: actions/github-script@0.3.0
