--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -44,7 +44,7 @@ jobs:
 
     - name: "Test for main version"
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
 
     - name: "Get branch name"
       if: github.event_name == 'pull_request'
@@ -58,7 +58,7 @@ jobs:
 
     - name: "Test for PR"
       if: github.event_name == 'pull_request'
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dots --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
 
     - name: "Comment PR"
       uses: actions/github-script@0.3.0
