--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -54,7 +54,7 @@ jobs:
 
     - name: "Test for main version"
       if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter markdown --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version main
 
     - name: "Get branch name"
       if: github.event_name == 'pull_request'
@@ -68,7 +68,7 @@ jobs:
 
     - name: "Test for PR"
       if: github.event_name == 'pull_request'
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} --reporter markdown --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
 
     - name: "Comment PR"
       uses: actions/github-script@v6.3.0
@@ -86,3 +86,9 @@ jobs:
               repo,
               body: message
             });
+
+    # https://www.plesk.com/blog/various/find-files-in-linux-via-command-line/
+    # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#adding-a-job-summary
+    - name: "Publish report"
+      run: |
+        cat $(find ./StrykerOutput/* -name "*.md") > $GITHUB_STEP_SUMMARY
