--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -25,8 +25,8 @@ env:
 
   GIT_ORGANIZATION: 'NelsonBN'
   PROJECT_NAME: 'demo-dotnet-mutation-tests'
-  PROJECT_PATH: $GITHUB_WORKSPACE . '/src/Demo.csproj'
-  TEST_PROJECT_PATH: $GITHUB_WORKSPACE . '/tests/Demo.Tests.csproj'
+  PROJECT_PATH: '${{ GITHUB_WORKSPACE }}/src/Demo.csproj'
+  TEST_PROJECT_PATH: '${{ GITHUB_WORKSPACE }}/tests/Demo.Tests.csproj'
 
 
 jobs:
@@ -36,6 +36,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: "Checkout"
+      uses: actions/checkout@v3
+
     - name: "Show paths 1"
       run: |
         echo "1 >> " . $GITHUB_WORKSPACE
