--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -25,7 +25,7 @@ env:
 
   GIT_ORGANIZATION: 'NelsonBN'
   PROJECT_NAME: 'demo-dotnet-mutation-tests'
-  PROJECT_PATH: 'Demo.csproj'
+  PROJECT_FILE: 'Demo.csproj'
   TEST_PROJECT_PATH: 'tests/Demo.Tests.csproj'
 
 
@@ -38,14 +38,6 @@ jobs:
     steps:
     - name: "Checkout"
       uses: actions/checkout@v3
-
-    - name: "Show paths 1"
-      run: |
-        echo "1 >> " . $GITHUB_WORKSPACE
-        echo "2 >> " . $PROJECT_PATH
-        echo "3 >> " . $TEST_PROJECT_PATH
-        pwd
-        ls -la
 
     - name: "Setup .NET"
       uses: actions/setup-dotnet@v2
@@ -75,17 +67,9 @@ jobs:
       run: |
         echo "Branch name is ${{ steps.branch-name.outputs.current_branch }}"
 
-    - name: "Show paths 2"
-      run: |
-        echo "1 >> " . $GITHUB_WORKSPACE
-        echo "2 >> " . $PROJECT_PATH
-        echo "3 >> " . $TEST_PROJECT_PATH
-        pwd
-        ls -la
-
     - name: "Test for PR"
       if: github.event_name == 'pull_request'
-      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} -p ${{ env.PROJECT_PATH }} --reporter markdown --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
+      run: dotnet stryker -tp ${{ env.TEST_PROJECT_PATH }} -p ${{ env.PROJECT_FILE }} --reporter markdown --reporter progress --reporter dashboard --dashboard-api-key ${{ secrets.STRYKER_API_KEY }} --version ${{ steps.branch-name.outputs.current_branch }}-${{ github.run_number }}
 
     - name: "Comment PR"
       uses: actions/github-script@v6.3.0
